--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,3 +31,5 @@ jobs:
 
     - name: Start application
       run: npm start
+      run: node 
+      --max-old-space-size=16384 node_modules/.bin/npm start
